// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeamMemberCard should render with many props assigned 1`] = `
<article
  className="Card TeamMemberCard animatedCard"
>
  <img
    alt="Kyle's beautiful face"
    className="image"
    src="https://kylemh.com/public/img/me.jpg"
  />
  <h5
    className="name"
  >
    Kyle Holmberg
  </h5>
  <i>
    Front-end Lead Engineer
  </i>
  <hr />
  <ul
    className="staffDetails"
  >
    <li>
      <span
        className="detailPrompt"
      >
        Twitter: 
      </span>
      <a
        className=""
        href="https://twitter.com/kylemh"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screenReaderOnly"
        >
          Opens in new window
        </span>
        @
        kylemh
        <test-file-mock
          className="externalLinkIcon"
        />
      </a>
    </li>
    <li>
      <span
        className="detailPrompt"
      >
        Email: 
      </span>
      <a
        className=""
        href="mailto:inbox@kylemh.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screenReaderOnly"
        >
          Opens in new window
        </span>
        inbox@kylemh.com
      </a>
    </li>
  </ul>
</article>
`;

exports[`TeamMemberCard should render with required props 1`] = `
<article
  className="Card TeamMemberCard animatedCard"
>
  <img
    alt="Kyle's beautiful face"
    className="image"
    src="https://kylemh.com/public/img/me.jpg"
  />
  <h5
    className="name"
  >
    Kyle Holmberg
  </h5>
  <i>
    Front-end Lead Engineer
  </i>
  <hr />
</article>
`;
